# ChessBois

./: .gitignore  CHANGELOG.md  Cargo.toml  ChessBois.code-workspace  README.md  Trunk.toml  copy-from-server.sh  graph.dot  host.sh  index.html  macos-release.sh  release.sh  run.sh  rust-toolchain.toml  web-deploy.sh  web-dev.sh  web-release.sh  windows-release.sh
.cargo/: config.toml
.github/: release.yaml
.github/workflows/: ci.yaml  release.yaml
bevy-solver/: Cargo.toml  README.md  styles.scss
bevy-solver/.cargo/: config.toml
bevy-solver/src/: lib.rs  main.rs  ui.rs
chess-solver/: Cargo.toml  index.html
e/: Cargo.toml
e/src/: main.rs
msrc-q11/: Cargo.toml
msrc-q11/src/: algs.rs  lib.rs  main.rs  old.rs  pieces.rs
msrc-q11/src/old/: _main.rs  _other.rs  cache.rs
old/src/: lib.rs  main.rs
old/src/ui/: visualization.rs
releases/Caleb's MSRCQ11 v0.1.9.dist/: bevy_solver-ce6bb01c668a213f.js  index.html  main-4f7cce477dcef0af.css
solver-ui/: Cargo.toml  Trunk.toml
solver-ui/.cargo/: config.toml
solver-ui/old/src/: solver.rs
solver-ui/old/src/ui/: selection.rs
solver-ui/src/: _old_ui.rs  board.rs  lib.rs  main.rs  ui.rs
solver-ui/src/ui/: mod.rs  selection.rs  visualization.rs
src/: board.rs  clipboard.rs  errors.rs  example_code.rs  lib.rs  main.rs  meta.rs  textmesh.rs  utils.rs  weburl.rs
src/board/: automatic.rs  cached_info.rs  cam_zoom.rs  cells.rs  coloured_moves.rs  compute.rs  coords.rs  hotkeys.rs  manual.rs  saftey_cap.rs  shared.rs  squares.rs  state_manual.rs  ui.rs  visualization.rs  viz_colours.rs
src/board/automatic/: compute.rs  summary.rs
src/board/cells/: cells.rs  coords.rs  markers.rs  visualization.rs
src/board/cells/visualization/: colours.rs  viz_opts.rs
src/board/manual/: check_move.rs  firebase.rs  freedom.rs  save.rs
src/board/manual/firebase/: mod.rs
src/board/manual/save/: ui.rs
src/board/squares/: cells.rs  coords.rs  markers.rs  mod.rs  visualization.rs
src/board/squares/cells/: cell_colouring.rs  mod.rs
src/board/squares/visualization/: viz_colours.rs  viz_opts.rs
src/solver/: algs.rs  boardoptions.rs  mod.rs  moves.rs  pieces.rs
src/solver/algs/: hamiltonian.rs
three-d-template/: Cargo.toml  g.txt  index.html  t.txt
three-d-template/src/: main.rs
wgpu-solver/: Cargo.toml
