[package]
name = "bevy_solver"
version = "0.1.7"
edition = "2021"

# [lib]
# crate-type = ["rlib"]

[features]
dev = ["bevy/dynamic_linking", "dep:bevy_editor_pls"]
# default = ["bevy/dynamic_linking", "editor"]
# editor = ["dep:bevy_editor_pls"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# codegen-units = 1
# lto = true

[dependencies.bevy]
version = "0.10.1"

# branch = "release-0.10.1"
# git = "https://github.com/bevyengine/bevy"

# version = "0.11.0-dev"
# git = "https://github.com/bevyengine/bevy"
# branch = "latest"

# version = "0.11.0-dev"
# path = "./bevy"

[dependencies]
bevy_editor_pls = { version = "0.4.0", optional = true }
bevy_egui = "0.20.3"
bevy_mod_picking = "0.13.0"
derive_more = "0.99.17"
futures = "0.3.28"
itertools = "0.11.0"
lru = "0.10.0"
once_cell = "1.18.0"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.100"
strum = { version = "0.25.0", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.9", features = ["js"] }
tracing-web = "0.1.2"
console_error_panic_hook = "0.1.7"
# wasm_thread = {version = "0.2.0", features = ["es_modules"]}
# wasm-futures-executor = "0.2.0"