[package]
name = "cap_solver"
version = "0.3.6"
edition = "2021"

[workspace]
members = ["bevy_egui_controls"]

[dependencies.bevy_egui_controls]
path = "./bevy_egui_controls"

[features]
default = ["dev",]
dev = ["bevy/dynamic_linking", "dep:bevy_editor_pls"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]

[dependencies]
bevy = "0.10.1"
bevy_editor_pls = { version = "0.4.0", optional = true }
bevy_egui = "0.20.0"
bevy_mod_picking = "0.13.0"
derivative = "2.2.0"
derive_more = "0.99.17"
itertools = "0.11.0"
lru = "0.11.0"
once_cell = "1.18.0"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.100"
strum = { version = "0.25.0", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["time"] }
wasm-bindgen-futures = "0.4.37"
meshtext = "0.3.0"
jsonm = "0.2.0"
anyhow = "1.0.72"
serde_repr = "0.1.16"
serde_json_any_key = "2.0.0"
uuid = "1.4.1"
futures = "0.3.28"
serde_qs = "0.12.0"
reqwest = { version = "0.11.18", features = ["json"] }
petgraph = "0.6.3"

[dependencies.web-sys]
version = "0.3.64"
features = ["Clipboard", "Navigator", "Window", "Location"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.9", features = ["js"] }
tracing-web = "0.1.2"
console_error_panic_hook = "0.1.7"
# wasm_thread = {version = "0.2.0", features = ["es_modules"]}
# wasm-futures-executor = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.2.0"
firebase-rs = "2.0.8"

# tokio
[target.'cfg(target_arch = "wasm32")'.dependencies.tokio]
version = "1.29.1"
features = ["macros", "rt", "sync"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tokio]
version = "1.29.1"
features = ["macros", "rt", "sync", "rt-multi-thread"]
