[package]
name = "shapes"
version = "0.1.0"
authors = ["Asger Nyman Christiansen <asgernyman@gmail.com>"]
edition = "2021"

# [lib]
# crate-type = ["cdylib"]

[dependencies]
cfg-if = "1.0.0"
three-d = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["time"] }
tracing-web = "0.1.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
